--- a/NetJSON/NetJSON.csproj
+++ b/NetJSON/NetJSON.csproj
@@ -54,6 +54,9 @@
   <ItemGroup>
     <Folder Include="lib\net40\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="BackUp.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net40\$(TargetFileName)"</PostBuildEvent>
