--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"> 
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd"> 
-    <id>PServiceBus</id> 
+    <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.0.0</version> 
+    <version>1.0.1</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description> 
     <language>en-US</language>
