- Fixed https://github.com/rpgmaker/NetJSON/issues/58
Signed-off-by: rpgmaker <olamide.bakre@gmail.com>

--- a/NetJSON.Tests/NetJSON.Tests.csproj
+++ b/NetJSON.Tests/NetJSON.Tests.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -51,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Models.cs" />
     <Compile Include="SerializeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
