--- a/NetJSON.Tests/NetJSON.Tests.csproj
+++ b/NetJSON.Tests/NetJSON.Tests.csproj
@@ -62,6 +62,11 @@
       <Name>NetJSON</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="json.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
