Fixed https://github.com/rpgmaker/NetJSON/issues/109 Fixed https://github.com/rpgmaker/NetJSON/issues/111 Upgrade version
Signed-off-by: rpgmaker <olamide.bakre@gmail.com>

--- a/NetJSON.Tests/NetJSON.Tests.csproj
+++ b/NetJSON.Tests/NetJSON.Tests.csproj
@@ -66,6 +66,9 @@
     <Content Include="json.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="netjson_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
