Fixed https://github.com/rpgmaker/NetJSON/issues/114 Include xml for intellisense
Signed-off-by: rpgmaker <olamide.bakre@gmail.com>

--- a/NetJSON.V3_5/NetJSON.V3_5.csproj
+++ b/NetJSON.V3_5/NetJSON.V3_5.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Debug\NetJSON.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Release\NetJSON.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -48,7 +50,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net35\$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>
+copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net35\$(TargetFileName)"
+
+copy "$(TargetDir)$(TargetName).xml" "$(SolutionDir)NetJSON\lib\net35\$(TargetName).xml"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
