--- a/NetJSON/NetJSON.csproj
+++ b/NetJSON/NetJSON.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net40\$(TargetFileName)"</PostBuildEvent>
+    <PostBuildEvent>
+copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net40\$(TargetFileName)"
+
+copy "$(TargetDir)$(TargetName).xml" "$(SolutionDir)NetJSON\lib\net40\$(TargetName).xml"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
