--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,14 +4,11 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.1.0.3</version> 
+    <version>1.1.0.4</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      Fixed performance issues caused by string comparison for casesentive flag
-      Minor performance improvement
-      Add support for deserialization of class/struct with non-default constructor
-      Improved string skipping optimization
+      Added Xml Documentation for support of intellisense
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
