--- a/NetJSON.Core/project.json
+++ b/NetJSON.Core/project.json
@@ -3,10 +3,12 @@
     "allowUnsafe": true,
     "compile": [ "../NetJSON/*.cs" ],
     "define": [ "NET_CORE" ],
-    "optimize": true
+    "optimize": true,
+    "xmlDoc": true
   },
   "copyright": "Phoenix Service Bus Inc",
   "dependencies": {
+    "Microsoft.Extensions.DependencyModel": "1.0.0",
     "NETStandard.Library": "1.6.0",
     "System.Dynamic.Runtime": "4.0.11",
     "System.Reflection": "4.1.0",
