- Fixed https://github.com/rpgmaker/NetJSON/issues/131 - Fixed https://github.com/rpgmaker/NetJSON/issues/130
Signed-off-by: rpgmaker <olamide.bakre@gmail.com>

--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,11 +4,11 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.2.1.1</version> 
+    <version>1.2.1.2</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      Added support for non-public type serialization
+      Fixed bug with enumeration not converting to non string value
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
