--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
+.svn
 /NetJSON/bin/Release
 /NetJSON/obj/Release
 *.suo
