--- a/NetJSON.Tests/NetJSON.Tests.csproj
+++ b/NetJSON.Tests/NetJSON.Tests.csproj
@@ -69,6 +69,9 @@
     <Content Include="netjson_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="trackerjson.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
