--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,15 +4,28 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.2.1.7</version> 
+    <version>1.2.1.8</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      Updated minimum version for net standard to 1.3.0
+      Added missing dependencies for .net standard 1.6
+      Removed unused targets
+      Added support for Date string formatting
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
     <projectUrl>https://github.com/rpgmaker/NetJSON</projectUrl>
     <iconUrl>http://iomegatrix.com/Pictures/logo.jpg</iconUrl>
-  </metadata> 
+    <dependencies>
+      <group targetFramework="netstandard1.6">
+        <dependency id="Microsoft.Extensions.DependencyModel" version="1.0.0" />
+        <dependency id="NETStandard.Library" version="1.6.0" />
+        <dependency id="System.Dynamic.Runtime" version="4.0.11" />
+        <dependency id="System.Reflection" version="4.1.0" />
+        <dependency id="System.Reflection.Emit" version="4.0.1" />
+        <dependency id="System.Reflection.Emit.Lightweight" version="4.0.1" />
+        <dependency id="System.Reflection.TypeExtensions" version="4.1.0" />
+      </group>
+    </dependencies>
+  </metadata>
 </package>
