--- a/NetJSON.V3_5/NetJSON.V3_5.csproj
+++ b/NetJSON.V3_5/NetJSON.V3_5.csproj
@@ -58,10 +58,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-copy "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net35\$(TargetFileName)"
-
-copy "$(TargetDir)$(TargetName).xml" "$(SolutionDir)NetJSON\lib\net35\$(TargetName).xml"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "$(TargetPath)" "$(SolutionDir)NetJSON\lib\net35\"
+xcopy /y "$(TargetDir)$(TargetName).xml" "$(SolutionDir)NetJSON\lib\net35\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
