-Fixed https://github.com/rpgmaker/NetJSON/issues/201 -Fixed https://github.com/rpgmaker/NetJSON/issues/199 - Updated version
Signed-off-by: rpgmaker <olamide.bakre@gmail.com>

--- a/NetJSON.V4_6/NetJSON.V4_6.csproj
+++ b/NetJSON.V4_6/NetJSON.V4_6.csproj
@@ -28,9 +28,11 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET_46</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Release\NetJSON.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
