--- a/NetJSON.Standard2_0/NetJSON.Standard2_0.csproj
+++ b/NetJSON.Standard2_0/NetJSON.Standard2_0.csproj
@@ -9,8 +9,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;NET_STANDARD;NET_STANDARD_20</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Optimize>true</Optimize>
+    <Optimize>false</Optimize>
     <DocumentationFile>bin\Debug\netstandard2.0\NetJSON.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>TRACE;NET_STANDARD;NET_STANDARD_20</DefineConstants>
+    <DocumentationFile>bin\Release\netstandard2.0\NetJSON.xml</DocumentationFile>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
