- Fixed https://github.com/rpgmaker/NetJSON/issues/205 - Fixed https://github.com/rpgmaker/NetJSON/issues/203

--- a/NetJSON.Tests/NetJSON.Tests.csproj
+++ b/NetJSON.Tests/NetJSON.Tests.csproj
@@ -71,6 +71,9 @@
     <Content Include="json.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="netjsonObj.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="netjson_test.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
