Updated to 1.2.8 version

--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,11 +4,12 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.2.7</version> 
+    <version>1.2.8</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      Fixed issue with serialization in .net standard 2.x
+      Fixed issue with deserialization of boolean
+      Added support for IReadonlyCollection
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
