--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,11 +4,15 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.2.10.2</version> 
+    <version>1.3.0</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      Fixed infinite loop issued caused by "\\" in Expando and Dictionary[string,object] types
+      - Fixed issue with incorrect serialization of string encoding
+      - Added support of ulong Enum
+      - Allow serialization of nullable value as null when skipping default value
+      - Added support of interfaces when using NetJSONKnownTypes with IncludeTypeInformation
+      - Added support for custom type serialization using  NetJSON.RegisterCustomTypeSerializer and NetJSON.RegisterCustomTypeDeserializer
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
