--- a/NetJSON/NetJSON.nuspec
+++ b/NetJSON/NetJSON.nuspec
@@ -4,15 +4,11 @@
     <id>NetJSON</id> 
     <title>NetJSON</title>
     <tags>json json-serializer javascript JSON serializer binary</tags>
-    <version>1.3.0</version> 
+    <version>1.3.1</version> 
     <authors>TJ Bakre</authors>
     <description>Faster than Any Binary?</description>
     <releaseNotes>
-      - Fixed issue with incorrect serialization of string encoding
-      - Added support of ulong Enum
-      - Allow serialization of nullable value as null when skipping default value
-      - Added support of interfaces when using NetJSONKnownTypes with IncludeTypeInformation
-      - Added support for custom type serialization using  NetJSON.RegisterCustomTypeSerializer and NetJSON.RegisterCustomTypeDeserializer
+      - Fixed issue with negative enum values
     </releaseNotes>
     <language>en-US</language>
     <licenseUrl>https://github.com/rpgmaker/NetJSON/blob/master/LICENSE.text</licenseUrl>
