--- a/NetJSON.Standard2_0/NetJSON.Standard2_0.csproj
+++ b/NetJSON.Standard2_0/NetJSON.Standard2_0.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)NetJSON\lib\netstandard2.0\&quot;&#xD;&#xA;xcopy /y &quot;$(TargetDir)$(TargetName).xml&quot; &quot;$(SolutionDir)NetJSON\lib\netstandard2.0\&quot;&#xD;&#xA;" />
+    <Exec Command="xcopy /y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)NetJSON\lib\netstandard2.0\&quot;&#xD;&#xA;xcopy /y &quot;$(TargetDir)$(TargetName).xml&quot; &quot;$(SolutionDir)NetJSON\lib\netstandard2.0\&quot;&#xD;&#xA;xcopy /y &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(SolutionDir)NetJSON\lib\netstandard2.0\&quot;&#xD;&#xA;" />
   </Target>
 
   <ItemGroup>
