--- a/NetJSON.Net7_0/NetJSON.Net7_0.csproj
+++ b/NetJSON.Net7_0/NetJSON.Net7_0.csproj
@@ -1,22 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>NetJSON</AssemblyName>
     <RootNamespace>NetJSON</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;NET_STANDARD;NET_STANDARD_20</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Optimize>false</Optimize>
-    <DocumentationFile>bin\Debug\netstandard2.0\NetJSON.xml</DocumentationFile>
+    <DefineConstants>TRACE;NET_7</DefineConstants>
+    <DocumentationFile>bin\Debug\NetJSON.xml</DocumentationFile>
+    <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>TRACE;NET_STANDARD;NET_STANDARD_20</DefineConstants>
-    <DocumentationFile>bin\Release\netstandard2.0\NetJSON.xml</DocumentationFile>
+    <DefineConstants>TRACE;NET_7</DefineConstants>
+    <DocumentationFile>bin\Release\NetJSON.xml</DocumentationFile>
+    <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,14 +26,6 @@
     <Compile Include="..\NetJSON\Models.cs" Link="Models.cs" />
     <Compile Include="..\NetJSON\NetJSON.cs" Link="NetJSON.cs" />
     <Compile Include="..\NetJSON\NetJSON.Internals.cs" Link="NetJSON.Internals.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.Reflection" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Extensions" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
