Fixed issue with not been able to deserialize boolean array (or non string based array caused by missing setting to current (ptr[index]). Added test from .net 4 to .net 7 to increase code coverage

--- a/NetJSON.Net7_0.Tests/NetJSON.Net7_0.Tests.csproj
+++ b/NetJSON.Net7_0.Tests/NetJSON.Net7_0.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="DeepEqual" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -16,6 +17,21 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetJSON.Net7_0\NetJSON.Net7_0.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="trackerjson.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="netjsonObj.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="netjson_test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="json.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
